deployment_templates/template.json
{
	"$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"management_vnet_CIDR": {
			"defaultValue": "192.168.120.0/24",
			"type": "String"
		},
		"management_vnet_subnet_CIDR": {
			"defaultValue": "192.168.120.0/25",
			"type": "String"
		},
		"virtualNetworks_mgmt_vnet_name": {
			"defaultValue": "management_vnet",
			"type": "String"
		},
		"virtualNetworks_sandbox_vnet_name": {
			"defaultValue": "sandbox_vnet",
			"type": "String"
		},
		"region_name": {
			"defaultValue": "brazilsouth",
			"type": "String"
		},
		"storageAccountType": {
			"type": "string",
			"defaultValue": "Standard_LRS",
			"allowedValues": ["Standard_LRS",
			"Standard_GRS",
			"Standard_ZRS",
			"Premium_LRS"],
			"metadata": {
				"description": "Storage Account type"
			}
		}
	},
	"variables": {
	    "apiVersion": "2016-06-01",
		"storageAccountName": "[concat(uniquestring(resourceGroup().id), '_storage')]",
		"vNet1": {
			"peeringName": "vNet_mgmt-to-vNet_sndbx"
		},
		"vNet2": {
			"peeringName": "vNet_sndbx-to-vNet_mgmt"
		},
		"gatewayPublicIPName" :"[uniquestring('azureGatewayIP')]"
	},
	"resources": [{
		"type": "Microsoft.Network/virtualNetworks",
		"name": "[parameters('virtualNetworks_mgmt_vnet_name')]",
		"apiVersion": "[variables('apiVersion')]",
		"location": "[parameters('region_name')]",
		"tags": {
			"network_type": "mgmt"
		},
		"properties": {
			"addressSpace": {
				"addressPrefixes": ["[parameters('management_vnet_CIDR')]"]
			},
			"subnets": [{
				"name": "default",
				"properties": {
					"addressPrefix": "[parameters('management_vnet_subnet_CIDR')]"
				}
			}]
		},
		"resources": [{
			"apiVersion": "[variables('apiVersion')]",
			"type": "virtualNetworkPeerings",
			"name": "[variables('vNet1').peeringName]",
			"location": "[resourceGroup().location]",
			"dependsOn": ["[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworks_mgmt_vnet_name'))]",
			"[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworks_sandbox_vnet_name'))]"],
			"comments": "This is the peering from vNet Management to vNet Sandbox",
			"properties": {
				"allowVirtualNetworkAccess": "true",
				"allowForwardedTraffic": "false",
				"allowGatewayTransit": "false",
				"useRemoteGateways": "false",
				"remoteVirtualNetwork": {
					"id": "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworks_sandbox_vnet_name'))]"
				}
			}
		}],
		"dependsOn": []
	},
	{
		"type": "Microsoft.Network/virtualNetworks",
		"name": "[parameters('virtualNetworks_sandbox_vnet_name')]",
		"apiVersion": "[variables('apiVersion')]",
		"location": "[parameters('region_name')]",
		"tags": {
			"network_type": "sandbox"
		},
		"properties": {
			"addressSpace": {
				"addressPrefixes": ["10.0.0.0/8"]
			},
			"subnets": [{
				"name": "default",
				"properties": {
					"addressPrefix": "10.0.0.0/24"
				}
			}]
		},
		"resources": [{
			"apiVersion": "[variables('apiVersion')]",
			"type": "virtualNetworkPeerings",
			"name": "[variables('vNet2').peeringName]",
			"location": "[resourceGroup().location]",
			"dependsOn": ["[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworks_sandbox_vnet_name'))]",
			"[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworks_mgmt_vnet_name'))]"],
			"comments": "This is the peering from vNet Sandbox to vNet Management",
			"properties": {
				"allowVirtualNetworkAccess": "true",
				"allowForwardedTraffic": "false",
				"allowGatewayTransit": "false",
				"useRemoteGateways": "false",
				"remoteVirtualNetwork": {
					"id": "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworks_mgmt_vnet_name'))]"
				}
			}
		}],
		"dependsOn": []
	},
	{
		"type": "Microsoft.Storage/storageAccounts",
		"name": "[variables('storageAccountName')]",
		"apiVersion": "2016-05-01",
		"location": "[resourceGroup().location]",
		"sku": {
			"name": "[parameters('storageAccountType')]"
		},
		"kind": "Storage",
		"properties": {
			
		}
	},
	{
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "nsg_management",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "first_rule",
            "properties": {
              "description": "This is the first rule",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
		  {
            "name": "second_rule",
            "properties": {
              "description": "This is the second rule",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1005,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
	{
        "apiVersion": "[variables('api-version')]",
        "type": "Microsoft.Network/virtualNetworkGateways",
        "name": "[uniqueString('a_gateway_name')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[concat('Microsoft.Network/publicIPAddresses/', parameters('gatewayPublicIPName'))]",
          "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "[variables('gatewaySubnetRef')]"
                },
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',parameters('gatewayPublicIPName'))]"
                }
              },
              "name": "vnetGatewayConfig"
            }
          ],
          "sku": {
            "name": "[parameters('gatewaySku')]",
            "tier": "[parameters('gatewaySku')]"
          },
          "gatewayType": "Vpn",
          "vpnType": "[parameters('vpnType')]",
          "enableBgp": "false"
        }
      }	
	],
	"outputs": {
		"storageAccountName": {
			"type": "string",
			"value": "[variables('storageAccountName')]"
		}
	}
}
